--- a/style.css
+++ b/style.css
@@ -136,17 +136,18 @@ button {
     grid-column: 1 / 3;
 }
 #errorDisplay {
-    display: none;
     border: black;
     background: linear-gradient(to right, #1e1b4b, #3498db);
-    max-width: 500px;
+    width: 400px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 12px;
 }
 .errorTop {
     background-color: black;
     padding: 24px;
+    width: 352px;
 }
 .errorBottom {
     padding: 48px 24px;
@@ -157,7 +158,6 @@ button {
     padding: 12px 24px;
     margin: 8px;
     width: 100px;
-
 }
 .footer {
     display: flex;
